[package]
name = "sqlite_playground"
version = "0.1.0"
edition = "2021"
description = "A very simple sqlite playground that can open db files or operate entirely in memory. Useful as a tool for learning or toying around!"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sqlite_playground"
repository = "https://github.com/bdferul/sqlite_playground/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.31.1"
tabled = "0.14.0"
